# lame-svn

CVSROOT/: checkoutlist  cvswrappers  loginfo  syncmail
hip/: AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.in
hip/debian/: Makefile.am  changelog  control  copyright  libmp3hip-dev.examples  python-hip.examples  python-hip.files  python2.1-hip.files  python2.2-hip.files  python2.3-hip.files  rules
hip/doc/: Makefile.am
hip/examples/: Makefile.am  hip_example.c
hip/include/: Makefile.am  hip.h
hip/lib/: Makefile.am  VbrTag.h  common.c  common.h  dct64_i386.c  dct64_i386.h  decode_i386.c  decode_i386.h  hip.c  huffman.h  interface.c  interface.h  l2tables.h  layer1.c  layer1.h  layer2.c  layer2.h  layer3.c  layer3.h  mpg123.h  mpglib.h  tabinit.c  tabinit.h
hip/python/: AUTHORS  ChangeLog  Makefile.am  PKG-INFO  README  Setup  config_unix.py  setup.cfg  setup.py
hip/python/examples/: playmp3.py
hip/python/src/: hipmodule.c  hipmodule.h  pyhip.c  pyhip.h  pympeginfo.c  pympeginfo.h
newweb/: about.php  contact.php  download.php  free.php  gpsycho.html  gpsycho.php  lame-faq.en.php  list.php  ms_stereo.php  outer_loop.php  quality.php  rationale.php  refs.php  sitemap.php  template.php  winamp.php
process/: README_SVN_USE.txt  release_management.txt  website_update.txt
py-lame/: README  slame
webpages/: .htaccess  about.html  about.php  abr.php  contact.html  contact.php  developers.html  developers.php  download.php  footer.html  free.html  free.php  gpsycho.php  history.html  index.html  index.php  index2.html  inside.html  inside.php  lame-faq.en.html  lame-faq.en.php  lame_ui_example.html  lame_ui_example.php  license.txt  links.html  links.php  list.html  list.php  menu.html  ms_stereo.php  preecho.php  (+21 more)
(+15 files in other folders)
